[gd_scene load_steps=7 format=2]

[ext_resource path="res://weapons/Grenade.gd" type="Script" id=1]
[ext_resource path="res://screenShaker.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 45.2548

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hurt_box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_explode_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 320.0

[node name="Grenade" type="RigidBody2D"]
collision_layer = 256
collision_mask = 3
gravity_scale = 0.0
linear_damp = 1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -32, -32 )
color = Color( 0.0470588, 0.698039, 0.34902, 1 )
polygon = PoolVector2Array( 64, 0, 64, 64, 0, 64, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/explode = SubResource( 3 )

[node name="FuseTimer" type="Timer" parent="."]

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource( 4 )
disabled = true

[node name="screenShaker" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
[connection signal="body_entered" from="hurt_box" to="." method="_on_hurt_box_body_entered"]
